--- a/internship.html
+++ b/internship.html
@@ -49,7 +49,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lumc.recruitee.com/l/nl/o/postdoc-interne-geneeskunde-b19mbeo72'>
+<h5><a href='https://lumc.recruitee.com/l/nl/o/postdoc-interne-geneeskunde-b19mbeo72'>
       Postdoc Interne Geneeskunde  (B.19.MB.EO.72) - LUMC
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -69,7 +69,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caterwings.join.com/jobs/251421-internship-sales-support-london-m-f-caterwings-rocket-internet'>Job @ CaterWings (London): Internship Sales Suppor... | JOIN</a></h5> 
+<h5><a href='https://caterwings.join.com/jobs/251421-internship-sales-support-london-m-f-caterwings-rocket-internet'>Job @ CaterWings (London): Internship Sales Suppor... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -139,7 +139,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ideapublicschools-english/job/oADh9fwn'>IDEA Public Schools Careers - Licensed Specialist in School Psychology Intern - Lower Valley (19-20)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ideapublicschools-english/job/oADh9fwn'>IDEA Public Schools Careers - Licensed Specialist in School Psychology Intern - Lower Valley (19-20)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -223,11 +223,11 @@
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://lodgify.workable.com/j/840E9E703F'>Lodgify - Jobs: Online Marketing Intern - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lodgify.workable.com/j/840E9E703F'>Lodgify - Jobs: Online Marketing Intern - Apply online</a></h5> 
 <p><span class="badge badge-light">Barcelona, Catalonia, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/taylorcorp/job/o6yBafw9'>Taylor Corporation Careers - Mechanical Engineering Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/taylorcorp/job/o6yBafw9'>Taylor Corporation Careers - Mechanical Engineering Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -285,7 +285,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://adomik.workable.com/jobs/1074062'>Customer Success, Internship F/M - Apply online - Adomik - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adomik.workable.com/jobs/1074062'>Customer Success, Internship F/M - Apply online - Adomik - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... ... of information and think critically; Outstanding excel skills; Excellent 
 presentation and ability to talk to clients (from Data Analyst to Chief Revenue 
@@ -312,7 +312,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/devialet/job/ox6x9fw3'>Devialet Careers - Digital Marketing Assistant H/F - Internship</a></h5> 
+<h5><a href='https://jobs.jobvite.com/devialet/job/ox6x9fw3'>Devialet Careers - Digital Marketing Assistant H/F - Internship</a></h5> 
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -414,7 +414,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://emailmeter.recruiterbox.com/jobs/fk0ja4o/'>
+<h5><a href='https://emailmeter.recruiterbox.com/jobs/fk0ja4o/'>
     Sales Development Intern at Email Meter
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -428,11 +428,11 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://unitednationsfoundation.applytojob.com/apply/9rnViliEDe/Intern-Programs-Girl-Up'>Intern, Programs, Girl Up - United Nations Foundation - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/9rnViliEDe/Intern-Programs-Girl-Up'>Intern, Programs, Girl Up - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/rzo5VBGk13/Intern-Universal-Access-Project'>Intern, Universal Access Project - United Nations Foundation - Career Page</a></h5> 
+<h5><a href='http://unitednationsfoundation.applytojob.com/apply/rzo5VBGk13/Intern-Universal-Access-Project'>Intern, Universal Access Project - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
