--- a/data-architect.html
+++ b/data-architect.html
@@ -61,7 +61,7 @@ Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/A770136ECD'>Datatonic - Jobs: Cloud Architect (GCP) - Apply online</a></h5> 
+<h5><a href='https://datatonic.workable.com/j/A770136ECD'>Datatonic - Jobs: Cloud Architect (GCP) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -74,7 +74,7 @@ Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <p>4 days ago ... You will join a talented team of software engineers, big data engineers, computer 
 vision experts and machine learning researchers, and are expected to get up?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/verifone/job/oK8aafwW'>Verifone Careers - Bigdata Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/verifone/job/oK8aafwW'>Verifone Careers - Bigdata Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... About Connect ? Payment Services ? Estate Management ? Verifone Marketplace ? 
 Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.</p>
@@ -105,7 +105,7 @@ effectively?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blueapron/jobs/1784143'>Job Application for Data Architecture Engineer at Blue Apron</a></h5> 
+<h5><a href='https://boards.greenhouse.io/blueapron/jobs/1784143'>Job Application for Data Architecture Engineer at Blue Apron</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -165,7 +165,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/datastrong/job/o2Qzafwl'>Datastrong Careers - Big Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/datastrong/job/o2Qzafwl'>Datastrong Careers - Big Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -291,7 +291,7 @@ class?...</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691423780-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691423780-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -364,7 +364,7 @@ implementation of ETL processes throughout the design, build and maintenance
 <p>Jun 24, 2019 ... We're looking for a GCP Data Architect who can design and implement modern 
 architecture for a diverse set of customers and industries. The ideal candidate?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/unusual/371b0b6f-2831-4d72-bacd-72c69136edc2'>Unusual Ventures - Senior Data Warehouse Architect</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -429,7 +429,7 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on:: 2019-06-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/h3d31emchei4baa74ngiryd3gw'>Solutions Data Architect ($200K) | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/h3d31emchei4baa74ngiryd3gw'>Solutions Data Architect ($200K) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
@@ -462,7 +462,7 @@ bricks-and-mortar retail world with innovative products that fuel...</p>
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
